--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,45 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "Backend",
   "main": "index.js",
-  "license": "MIT"
+  "repository": "https://github.com/cwils021/image-mrkt",
+  "author": "Chris Wilson",
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon",
+    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js",
+    "build": "tsc -p tsconfig.prod.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
+  "prettier": "@shopify/prettier-config",
+  "dependencies": {
+    "@types/dotenv-safe": "^8.1.1",
+    "dotenv-safe": "^8.2.0"
+  },
+  "devDependencies": {
+    "@shopify/eslint-plugin": "^40.2.2",
+    "@shopify/prettier-config": "^1.1.2",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.4"
+  }
 }
