--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,13 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
     "@types/dotenv-safe": "^8.1.1",
-    "dotenv-safe": "^8.2.0"
+    "@types/express": "^4.17.11",
+    "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@shopify/eslint-plugin": "^40.2.2",
@@ -37,6 +42,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
