write server init tests

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "@types/express": "^4.17.11",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "@shopify/eslint-plugin": "^40.2.2",
