--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.10",
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.11",
+    "@types/supertest": "^2.0.11",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
