--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@shopify/eslint-plugin": "^40.2.2",
     "@shopify/prettier-config": "^1.1.2",
     "@types/jest": "^26.0.23",
+    "@types/mongoose": "^5.10.5",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
