--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "firestore-admin": "^1.3.0",
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
