--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - working-directory: ./server/
-    - run: yarn test
+    - name: run server tests
+      working-directory: ./server/
+      run: yarn test
     
 
