--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: run server tests
-      working-directory: ./server/
+      working-directory: ./server
       run: yarn test
     
 
