--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: run server tests
       working-directory: ./server
-      run: yarn test
+      run: |
+        yarn install
+        yarn test
+        
     
 
