--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.6.7",
+    "firebase-admin": "^9.9.0",
     "firestore-admin": "^1.3.0",
     "mongoose": "^5.12.7"
   },
